issue tracker - batch edit - align checkboxes with text

--- a/modules/issue_tracker/css/issue_tracker_batchmode.css
+++ b/modules/issue_tracker/css/issue_tracker_batchmode.css
@@ -42,7 +42,7 @@
   padding-right: 10px;
 }
 
-.filter label input {
+.filter-list label input {
   margin: 0;
   margin-right: 4px;
   margin-bottom: 4px;
